--- a/Vocabulous/bower.json
+++ b/Vocabulous/bower.json
@@ -19,7 +19,8 @@
     "vaadin-date-picker": "^2.0.0",
     "vaadin-grid": "^3.0.0",
     "paper-input": "^2.0.1",
-    "paper-button": "^2.0.0"
+    "paper-button": "^2.0.0",
+    "vaadin-valo-theme": "vaadin/vaadin-valo-theme#^0.3.2"
   },
   "resolutions": {
     "polymer": "^2.0",
