--- a/Vocabulous/bower.json
+++ b/Vocabulous/bower.json
@@ -5,7 +5,7 @@
   ],
   "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#2.0-preview",
+    "app-layout": "PolymerElements/app-layout#^2.0.4",
     "app-route": "PolymerElements/app-route#2.0-preview",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
     "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
