practiceunit- page designed

--- a/Vocabulous/bower.json
+++ b/Vocabulous/bower.json
@@ -20,7 +20,8 @@
     "vaadin-grid": "^3.0.0",
     "paper-input": "^2.0.1",
     "paper-button": "^2.0.0",
-    "vaadin-valo-theme": "vaadin/vaadin-valo-theme#^0.3.2"
+    "vaadin-valo-theme": "vaadin/vaadin-valo-theme#^0.3.2",
+    "time-counter": "^1.0.1"
   },
   "resolutions": {
     "polymer": "^2.0",
