--- a/dataserver/pom.xml
+++ b/dataserver/pom.xml
@@ -33,6 +33,7 @@
             <groupId>com.airhacks</groupId>
             <artifactId>jaxrs-cors</artifactId>
             <version>0.0.2</version>
+             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
