--- a/Vocabulous/bower.json
+++ b/Vocabulous/bower.json
@@ -18,13 +18,11 @@
     "app-storage": "^2.0.2",
     "vaadin-date-picker": "^2.0.0",
     "vaadin-grid": "^3.0.0",
-    "paper-input": "^2.2.2",
+    "paper-input": "^2.0.1",
     "paper-button": "^2.0.0",
     "vaadin-valo-theme": "vaadin/vaadin-valo-theme#^0.3.2",
     "time-counter": "^1.0.1",
-    "web-animations-js": "^2.3.1",
-    "input": "^0.1.0",
-    "iron-input": "^2.1.3"
+    "web-animations-js": "^2.3.1"
   },
   "resolutions": {
     "polymer": "^2.0",
